--- a/src/render/components/ChannelList/ChannelList.module.css
+++ b/src/render/components/ChannelList/ChannelList.module.css
@@ -1,1 +1,12 @@
+.channellist {
+    height: 100%;
+    overflow-y: clip;
+    display: flex;
+    flex-direction: column;
+}
 
+.channellist ul {
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 100%;
+}
