--- a/src/render/index.css
+++ b/src/render/index.css
@@ -90,3 +90,12 @@ html, body {
         color-scheme: dark;
     }
 }
+
+html, body {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+
+    overflow: clip;
+}
