--- a/src/render/views/Home/Home.module.css
+++ b/src/render/views/Home/Home.module.css
@@ -1,3 +1,6 @@
 .home {
-    display: flex;
+    display: grid;
+    grid-template-columns: 10em 15em 1fr;
+    grid-template-rows: 100%;
+    max-height: 100%;
 }
