--- a/src/render/views/Home/Home.module.css
+++ b/src/render/views/Home/Home.module.css
@@ -2,5 +2,5 @@
     display: grid;
     grid-template-columns: 10em 15em 1fr;
     grid-template-rows: 100%;
-    max-height: 100%;
+    height: 100%;
 }
