make things look prettier

--- a/src/render/components/Message/Message.module.css
+++ b/src/render/components/Message/Message.module.css
@@ -1,1 +1,12 @@
+.message {
+    list-style: none;
+    display: flex;
+    margin-top: 1em;
+    gap: 1em;
+}
 
+.message code {
+    display: block;
+    text-wrap-mode: wrap;
+    word-break: break-word;
+}
