--- a/src/render/index.css
+++ b/src/render/index.css
@@ -1,6 +1,14 @@
+/*
+@license ./LICENSE
+*/
+@import url('@fontsource-variable/exo-2');
+@import url('highlight.js/styles/atom-one-dark.min.css');
+
 html, body {
     width: 100%;
     height: 100%;
+
+    font-family: 'Exo 2 Variable';
 }
 
 :root {
