bunch more message rendering stuff

--- a/src/render/components/Message/Message.module.css
+++ b/src/render/components/Message/Message.module.css
@@ -10,3 +10,12 @@
     text-wrap-mode: wrap;
     word-break: break-word;
 }
+
+.content img {
+    width: 1.2em;
+    height: 1.2em;
+}
+
+.message > div > img {
+    max-width: 15em;
+}
