mostly message cache stuff

--- a/src/render/components/ChannelList/ChannelList.module.css
+++ b/src/render/components/ChannelList/ChannelList.module.css
@@ -3,12 +3,13 @@
     overflow-y: clip;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 .channellist ul {
     list-style: none;
+}
 
-    overflow-y: auto;
-    overflow-x: hidden;
-    height: 100%;
+.channellist > ul {
+    padding: 0;
 }
